--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -535,7 +535,7 @@ a {
 
 .vhsf-panel h2 {
   color: #1a1a1a;
-  text-align: left;
+  text-align: center;
   font-size: 2.25rem;
   margin-bottom: 1.5rem;
 }
